落地 solver-service 内部查询接口并切换 task-service 调用路径